--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -35,7 +35,7 @@ body {
      padding: 0;
      margin:0%;
      /*background-color: #4a2c2a;*/
-     background-color: #6f872f;
+     background-color: #96753e;
 
      
 
