--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -1,31 +1,3 @@
-#alexyvonne {
-
-     width: 70%;
-     height: 50%;
-     padding: 5px;
-     margin: 5px;
-     border: whitesmoke 5px solid;
-
-}
-
-.about {
-
-    font-size: 3rem;
-    color: whitesmoke;
-    padding: 10px;
-}
-
-.aboutus-wrapper {
-
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    background-color:#99653e
-    width: 100%;
-    
-}
-
 body {
 
      
@@ -36,6 +8,8 @@ body {
      margin:0%;
      /*background-color: #4a2c2a;*/
      background-color: #96753e;
+     border: 5px solid white;
+     
 
      
 
@@ -48,7 +22,7 @@ body {
 
     /*background-color:#877e54;*/
     /*background-color: #99653e;*/
-    background-color: #b39b68;
+    background-color: #679969;
     width: 100;
     color: whitesmoke;
     font-size: 2rem;
@@ -213,10 +187,60 @@ span #title {
     
 }
 
-/*#slideshow > div { 
-    position: absolute; 
-    top: 10px; 
-    left: 10px; 
-    right: 10px; 
-    bottom: 10px; 
-}*/
+
+/*  About Page Styling */
+
+.about-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+  
+}
+
+.alexyvonne {
+    flex: content;
+    width: 90%;
+    height: 50%;
+    border: solid 5px white;
+}
+
+div .about-image {
+
+    margin: 0;
+    padding: 0;
+    width: 40%;
+    height: 80%;
+
+}
+
+.about-image {
+
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
+.about-content {
+    flex: content;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+   
+    
+}
+
+
+
+
+
+
+.heading {
+
+    font-size: 3rem;
+    color: white;
+    text-decoration: underline;
+}
