--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -182,8 +182,8 @@ span #title {
 .slideshow { 
     margin: 15px auto; 
     position: relative; 
-    width: 500px;
-    height:300px; 
+    width: 60%;
+    height:30%;
     padding: 5px; 
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
     
