--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -26,13 +26,13 @@ body {
     /*background-color: #99653e;*/
     background-color: #679969;
     width: 100%;
+    height: 100%;
     color: whitesmoke;
     font-size: 2rem;
     display: flex;
-    margin-top: 0%;
-    padding: 1%;
-    margin: 1%;
-    overflow:hidden;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    
     
     
     
@@ -41,6 +41,7 @@ body {
 .footer {
 
     margin: auto;
+    overflow: hidden;
    
 }
 
