--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -9,8 +9,8 @@ body {
      /*background-color: #4a2c2a;*/
      background-color: #96753e;
      border: 5px solid white;
-     width: 100%;
-     height: 100%;
+     max-width: 100%;
+     max-height: 100%;
      
 
      
