--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -75,6 +75,7 @@ html {
 
 .navbar {
     /*background-color: rgb(170, 214, 49);*/
+    font-family: 'Indie Flower',Arial, Helvetica, sans-serif;
     max-width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../img/unterhose.jpg');
     background-size: cover;
@@ -113,6 +114,7 @@ html {
     overflow-x: hidden;
     transition: 0.5s;  
     border-radius: 10px;
+    font-family: 'Indie Flower',Arial, Helvetica, sans-serif;
     
 
 }
