--- a/template/template.html
+++ b/template/template.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Donald E. Campbell II">
     <title>Hochlandrinder von Ehesbach</title>
     <link rel="stylesheet" href="../CSS/HVEstyle.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../js/sidebar.js"></script>
     
 </head>
@@ -33,10 +33,10 @@
 
         <div id="side-menu" class="side-nav">
             <a href="#" class="btn-close" onclick="closeSideMenu()">&times;</a>
-            <a href="../index.html">Home</a>
-            <a href="../template/template.html">Preisliste</a>
-            <a href="#">About</a>
-            <a href="mailto:von-ehesbach@web.de">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="pages/preisliste.html">Preisliste</a>
+            <a href="pages/about.html">&Uuml;ber uns</a>
+            <a href="mailto:von-ehesbach@web.de">Kontakt</a>
         </div>
 
        <!-- Slideshow Showcase-->
