--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -174,8 +174,8 @@ span #title {
 
 #images {
     display: block;
-    max-width: 70%;
-    max-height: 30%;
+    max-width: 50%;
+    max-height: 50%;
   }
   
 
@@ -183,10 +183,10 @@ span #title {
 .slideshow { 
     margin: 15px auto; 
     position: relative; 
-    width: 60%;
-    height:30%;
-    padding: 5px; 
+    width: 100%;
+    height: 100%;
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+    border: #679969 solid 5px;
     
 }
 
