--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -7,7 +7,8 @@ body {
      padding: 0;
      margin:0%;
      /*background-color: #4a2c2a;*/
-     background-color: #96753e;
+     /*background-color: #96753e;*/
+     background-color: #252924;
      border: 5px solid white;
      max-width: 100%;
      max-height: 100%;
