--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -210,7 +210,7 @@ span #title {
     width: 100%;
     height: 100%;
     margin-right:  5px;
-    margin-left: 5px;
+    
     
 }
 
@@ -220,6 +220,7 @@ div .about-image {
     width: 30%;
     height: 30%;
     padding-right: 50px;
+    padding-left: 50px;
     
 }
 
