--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -262,6 +262,7 @@ div .about-image {
                     width: 98%;
                     height: 100%;
                     padding-right: 50px;
+                    padding-left: 50px;
                     
                 }
 
