--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -261,6 +261,7 @@ div .about-image {
             
                     width: 98%;
                     height: 100%;
+                    display: flex;
                     padding-right: 50px;
                     padding-left: 50px;
                     
