--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -262,8 +262,8 @@ div .about-image {
                     width: 98%;
                     height: 100%;
                     display: flex;
-                    padding-right: 50px;
-                    padding-left: 50px;
+                    padding-right: 50%;
+                    padding-left: 50%;
                     
                 }
 
