--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -219,8 +219,8 @@ div .about-image {
    
     width: 30%;
     height: 30%;
-    padding-right: 50px;
-    padding-left: 50px;
+    padding-right: 50%;
+    padding-left: 50%;
     
 }
 
