--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -219,8 +219,8 @@ div .about-image {
    
     width: 30%;
     height: 30%;
-    padding-right: 50%;
-    padding-left: 50%;
+   /* padding-right: 50%;*/
+    /*padding-left: 50%;*/
     
 }
 
@@ -262,8 +262,8 @@ div .about-image {
                     width: 98%;
                     height: 100%;
                     display: flex;
-                    padding-right: 50%;
-                    padding-left: 50%;
+                    /* padding-right: 50%;*/
+                    /*padding-left: 50%;*/
                     
                 }
 
