--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -230,7 +230,7 @@ div .about-image {
     
     width: 60%;
     height: 60%;
-    padding: 0;
+    padding-left: 5%;
     margin: 0;
     color: #f0ead6;
 
