--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -231,12 +231,15 @@ div .about-image {
     
     width: 60%;
     height: 60%;
-    padding-left: 5%;
     margin: 0;
     color: #f0ead6;
 
 }
 
+p .about-content {
+    padding-left: 5%;
+
+}
 
 @media (max-width: 750px) and (min-width: 360px) {
     
@@ -247,6 +250,11 @@ div .about-image {
                     width: 100%;
                     height: 100%;               
                 
+                }
+     
+                p .about-content {
+                   padding-left: 5%;
+
                 }
 
                 .about-content {
