--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -237,7 +237,7 @@ div .about-image {
 }
 
 p .about-content {
-    padding-left: 5%;
+    margin-left: 5%;
 
 }
 
@@ -253,7 +253,7 @@ p .about-content {
                 }
      
                 p .about-content {
-                   padding-left: 5%;
+                   margin-left: 5%;
 
                 }
 
