--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -205,7 +205,7 @@ span #title {
    
 }
 
-.alexyvonne {
+img .alexyvonne {
 
     
     width: 100%;
@@ -234,13 +234,11 @@ div .about-image {
     height: 60%;
     margin: 0;
     color: #f0ead6;
-
-}
-
-p .about-content {
     margin-left: 5%;
 
 }
+
+
 
 @media (max-width: 750px) and (min-width: 360px) {
     
