--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -221,6 +221,7 @@ div .about-image {
     width: 30%;
     height: 30%;
     display: flex;
+    margin: 0;
     /* padding-right: 50%;*/
     /*padding-left: 50%;*/
     
