--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -268,7 +268,7 @@ div .about-image {
                     width: 98%;
                     height: 100%;
                     display: flex;
-                    margin-right:  5px;
+                    margin:  0;
                     /* padding-right: 50%;*/
                     /*padding-left: 50%;*/
                     
