--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -221,7 +221,7 @@ div .about-image {
     width: 30%;
     height: 30%;
     display: flex;
-    margin: 0;
+    margin: auto;
     /* padding-right: 50%;*/
     /*padding-left: 50%;*/
     
