--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -221,6 +221,8 @@ div .about-image {
     width: 30%;
     height: 30%;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;  
     margin: auto;
     /* padding-right: 50%;*/
     /*padding-left: 50%;*/
