--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -234,6 +234,7 @@ div .about-image {
     
     width: 60%;
     height: 60%;
+    display: flex;
     margin: 0;
     color: #f0ead6;
     margin-left: 5%;
