--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -233,12 +233,11 @@ div .about-image {
 .about-content {
 
     
-    width: 60%;
-    height: 60%;
-    display: flex;
-    margin: 0;
-    color: #f0ead6;
-    margin-left: 5%;
+   display: flex;
+   flex-wrap: wrap;
+   width: 100%;
+   height: 100%;               
+                
 
 }
 
