--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -225,11 +225,10 @@ div .about-image {
 }
 
 .about-content {
-
-    
-   
-   width: 100%;
-   height: 100%;               
+    width: 60%;
+    height: 60%;
+    padding: 0;
+    margin: 0;             
                 
 
 }
