--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -193,6 +193,7 @@ span #title {
 }
 
 
+
 /*  About Page Styling */
 
 .about-container {
@@ -205,11 +206,12 @@ span #title {
    
 }
 
-img .alexyvonne {
+.alexyvonne {
+
     
     width: 100%;
-    height: 100%;    
-    border: #679969 solid 5px;
+    height: 100%;
+    margin-right:  5px;
     
     
 }
@@ -219,19 +221,19 @@ div .about-image {
    
     width: 30%;
     height: 30%;
-   /* padding-right: 50%;*/
-    /*padding-left: 50%;*/
+    padding-right: 50px;
     
 }
 
 .about-content {
+
+    
     width: 60%;
     height: 60%;
-    color: white;
     padding: 0;
-    margin: 0;    
-}
+    margin: 0;
 
+}
 
 
 @media (max-width: 750px) and (min-width: 360px) {
@@ -244,8 +246,6 @@ div .about-image {
                     height: 100%;               
                 
                 }
-     
-               
 
                 .about-content {
 
@@ -261,10 +261,7 @@ div .about-image {
             
                     width: 98%;
                     height: 100%;
-                    display: flex;
-                    margin:  0;
-                    /* padding-right: 50%;*/
-                    /*padding-left: 50%;*/
+                    padding-right: 50px;
                     
                 }
 
