--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -222,7 +222,8 @@ div .about-image {
     width: 30%;
     height: 30%;
     padding-right: 50px;
-    
+    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+    border: #679969 solid 5px;
 }
 
 .about-content {
@@ -232,8 +233,12 @@ div .about-image {
     height: 60%;
     padding: 0;
     margin: 0;
-    color: whitesmoke;
+   
 
+}
+
+p .about-content {
+    color: whitesmoke;
 }
 
 
