--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -259,6 +259,7 @@ div .about-image {
                     height: 100%;
                     padding: 0;
                     margin: 0;
+                    color: whitesmoke;
                 
                 }
 
