--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -232,7 +232,7 @@ div .about-image {
     width: 60%;
     height: 60%;
     padding: 0;
-    margin: 0;
+    margin: 1%;
     color: whitesmoke;
    
 
@@ -258,7 +258,7 @@ div .about-image {
                     width: 98%;
                     height: 100%;
                     padding: 0;
-                    margin: 0;
+                    margin: 1%;
                     color: whitesmoke;
                 
                 }
