--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -212,6 +212,7 @@ span #title {
     width: 100%;
     height: 100%;
     margin-right:  5px;
+    margin-left:  5px;
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
     border: #679969 solid 5px;
     
