--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -239,6 +239,17 @@ div .about-image {
 
 }
 
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  color: whitesmoke;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
 
 
 
