--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -190,8 +190,8 @@ span #title {
 .slideshow { 
     margin: 15px auto; 
     position: relative; 
-    width: 100%;
-    height: 100%;
+    width: 30%;
+    /*height: 100%;*/
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
     border: #679969 solid 5px;
     
