--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -4,8 +4,8 @@ body {
      font-family: Arial, Helvetica, sans-serif;
      font-size: 15px;
      line-height: 1.5;
-     padding: 0;
-     margin:0%;
+     padding: 1%;
+     margin:1%;
      /*background-color: #4a2c2a;*/
      /*background-color: #96753e;*/
      background-color: #252924;
@@ -216,10 +216,10 @@ span #title {
     
     width: 100%;
     height: 100%;
-    margin-right:  5px;
-    margin-left:  5px;
+    align-items: center;
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
     border: #679969 solid 5px;
+    
     
 }
 
@@ -273,8 +273,8 @@ td, th {
                 .slideshow { 
                     margin: 15px auto; 
                     position: relative; 
-                    width: 50%;
-                    /*height: 100%;*/
+                    width: 100%;
+                    height: 100%;
                     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
                     border: #679969 solid 5px;
     
