--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -181,16 +181,17 @@ span #title {
 
 #images {
     display: block;
-    max-width: 40%;
+    max-width: 100%;
     /*max-height: 50%;*/
   }
   
 
 /* Slideshow CSS    */
 .slideshow { 
-    margin: 15px auto; 
+    margin: 15px auto;
     position: relative; 
-    width: 30%;
+    align-items: center;
+    width: 40%;
     /*height: 100%;*/
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
     border: #679969 solid 5px;
@@ -270,15 +271,18 @@ td, th {
                 
                 }
 
-                .slideshow { 
-                    margin: 15px auto; 
-                    position: relative; 
+           
+
+                .slideshow{ 
+                    margin-top: 15px;
+                    margin-bottom: 15px;
+                    position:relative; 
                     width: 100%;
-                    height: 100%;
-                    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
-                    border: #679969 solid 5px;
+                    /*height: 100%;*/
+                    box-shadow: 0 0 10px rgba(0,0,0,0.4); 
+                    border: #679969 solid 1px;           
     
-                }
+                } 
 
                 .about-content {
 
