--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -88,7 +88,7 @@ html {
     overflow: hidden;
     display: flex;
     flex-direction: row;
-    justify-content: baseline;
+    justify-content:center;
     flex-wrap: wrap-reverse;
     margin: 1% ;
     padding: 0.5%;
