--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -89,19 +89,22 @@ html {
 
 .navbar {
     /*background-color: rgb(170, 214, 49);*/
-    font-family: 'Indie Flower',Arial, Helvetica, sans-serif;
+    font-family: 'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
     /*max-width: 100%;*/
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../img/bulllogo.jpg');
-    background-size: cover;
-    height: 300px;
-    background-position: center;
+    background-size:cover;
+    width: 100%;
+    background-position:center;
     overflow: hidden;
     display: flex;
     flex-direction:row;
     justify-content:center;
     flex-wrap: wrap-reverse;
-    margin: 1% ;
-    padding: 0.5%;
+    margin-bottom: 2%;
+    padding-bottom: 10%;
+    padding-top: 5%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+    border: #679969 solid 5px;
     
     
    
@@ -130,7 +133,8 @@ html {
     overflow-x: hidden;
     transition: 0.5s;  
     border-radius: 10px;
-    font-family: 'Indie Flower',Arial, Helvetica, sans-serif;
+    font-family: 'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
+    
     
 
 }
@@ -186,7 +190,6 @@ span #title {
     color:whitesmoke;
     font-size: 10rem;
     font-weight:bolder;
-    margin: 0;
     width: 100%;
     /*background-color: rgb(5, 12, 5);*/
 }
