--- a/CSS/HVEstyle.css
+++ b/CSS/HVEstyle.css
@@ -89,7 +89,7 @@ html {
 
 .navbar {
     /*background-color: rgb(170, 214, 49);*/
-    font-family: 'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
+    font-family: 'New Tegomin', cursive,'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
     /*max-width: 100%;*/
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../img/bulllogo.jpg');
     background-size:cover;
@@ -133,8 +133,7 @@ html {
     overflow-x: hidden;
     transition: 0.5s;  
     border-radius: 10px;
-    font-family: 'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
-    
+    font-family: 'New Tegomin', cursive,'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
     
 
 }
