--- a/HVEstyle.css
+++ b/HVEstyle.css
@@ -89,7 +89,7 @@ html {
 
 .navbar {
     /*background-color: rgb(170, 214, 49);*/
-    font-family: 'New Tegomin', 'Emblema One', 'Indie Flower',Arial, Helvetica, sans-serif;
+    font-family: 'New Tegomin', 'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
     /*max-width: 100%;*/
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../img/bulllogo.jpg');
     background-size:cover;
@@ -133,7 +133,7 @@ html {
     overflow-x: hidden;
     transition: 0.5s;  
     border-radius: 10px;
-    font-family: 'New Tegomin', 'Emblema One', 'Indie Flower',Arial, Helvetica, sans-serif;
+    font-family: 'New Tegomin', 'Emblema One', cursive,'Indie Flower',Arial, Helvetica, sans-serif;
     
 
 }
@@ -187,7 +187,7 @@ span #title {
 #title {
 
     color:whitesmoke;
-    font-size: 8rem;
+    font-size: 10rem;
     font-weight:bolder;
     width: 100%;
     /*background-color: rgb(5, 12, 5);*/
@@ -311,9 +311,9 @@ td, th {
 
                 div .about-image {
             
-                    width: 98%;
-                    height: 100%;
-                    padding-right: 50px;
+                    width: 100%; 
+                    height: 100%;      
+                    padding: 0%;             
                     
                 }
 
@@ -327,6 +327,17 @@ td, th {
                     
                     
                 }
+
+                .alexyvonne {
+
+                width: 100%; 
+                height: 100%;
+                box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+                border: #679969 solid 5px;
+                padding: 0%;
+
+                }
+
                 
                 .preisliste {
                     flex-basis: 500px;
